--- a/style.css
+++ b/style.css
@@ -4,11 +4,51 @@
     box-sizing: border-box;
 }
 
-/*########################### Body ############################*/
-nav,
-aside {
+/*#######################  Nav Bar    #############################*/
 
-    padding: 2px;
+nav {
+
+    background-color: #d1d1e0;
+    width: 100%;
+}
+
+nav ul {
+    overflow: hidden;
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+
+
+}
+
+nav ul li a {
+    margin: 0 auto;
+    padding: 15px;
+    float: left;
+    text-decoration: none;
+    color: black;
+    font-family: Raleway, sans-serif;
+    display: block;
+}
+
+nav ul li a:hover {
+    background-color: #e6e6ff;
+    border-radius: 0.7em;
+}
+
+
+
+
+
+
+
+
+
+/*########################### Body ############################*/
+
+
+body {
+    line-height: 1;
 
 }
 
@@ -66,7 +106,7 @@ div.infoPlus h2 {
 h1 {
     font-family: 'Roboto', sans-serif;
     font-size: 60px;
-    margin: 5px;
+    margin: 0;
 
 }
 
@@ -94,7 +134,7 @@ header p {
 
 aside p {
 
-    margin: 0px 10px 10px 0px;
+    margin: 10px 10px 10px 0px;
     padding: 0px 0px 15px;
     width: 240px;
 
